Frontend: dashboard UI update + cleanup

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="keywords" content="skill tree, learning, AI, education" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)" />
-  <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)" />
+  <!-- Consolidated theme-color (media-specific theme-color meta tags are not supported by some browsers) -->
+  <meta name="theme-color" content="#000000" />
   <link rel="icon" href="https://via.placeholder.com/32" type="image/x-icon">
   <title>Skill Tree</title>
 
