--- a/dashboard.html
+++ b/dashboard.html
@@ -5,11 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SkillTree — Dashboard</title>
 
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Custom Dashboard Styles -->
-  <link rel="stylesheet" href="assets/css/three-dashboard.css">
+  <link rel="stylesheet" href="../dist/output.css">
 
   <!-- Three.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
