Integrate FastAPI auth with Electron frontend (login, signup, logout)

--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,9 @@
   <title>SkillTree — Dashboard</title>
 
   <link rel="stylesheet" href="../dist/output.css">
+  <!--auth -->
+  <script src="assets/js/auth-guard.js"></script>
+
 
   <!-- Three.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
@@ -148,7 +151,7 @@
   <!-- Three.js Scripts Last (Heavy) -->
   <script src="assets/js/three-2d.js"></script>
   <script src="assets/js/three-3d.js"></script>
-
+  
   <!-- Inline Script for Theme Toggle and Resize Handling -->
   <script>
     // Theme Toggle
@@ -190,6 +193,6 @@
       if (loader) loader.classList.add('hidden');
     }, 2000); // Placeholder; replace with actual init signal
   </script>
-
+<script src="assets/js/logout.js"></script>
 </body>
 </html>
